--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
 <body>
-    <!-- Responsive navbar-->
+    <!-- BARRA DE NAVEGACION-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="#!">Logo Del Negocio Prueba</a>
@@ -23,10 +23,10 @@
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Nosotros</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#!">Servicios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#!">Contactos</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">INICIO</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/pages/Nosotros.html">NOSOTROS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/pages/Servicios.html">SERVICIOS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/pages/Contactos.html">CONTACTOS</a></li>
                 </ul>
             </div>
         </div>
