--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">INICIO</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/pages/Nosotros.html">NOSOTROS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/pages/Servicios.html">SERVICIOS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/pages/Contactos.html">CONTACTOS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/Nosotros.html">NOSOTROS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/Servicios.html">SERVICIOS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/Contactos.html">CONTACTOS</a></li>
                 </ul>
             </div>
         </div>
