--- a/pages/Contactos.html
+++ b/pages/Contactos.html
@@ -22,10 +22,10 @@
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="/index.html">INICIO</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/pages/Nosotros.html">NOSOTROS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/pages/Servicios.html">SERVICIOS</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="/pages/Contactos.html">CONTACTOS</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="index.html">INICIO</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/Nosotros.html">NOSOTROS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/Servicios.html">SERVICIOS</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="pages/Contactos.html">CONTACTOS</a></li>
                 </ul>
             </div>
         </div>
@@ -65,7 +65,7 @@
 
 
 
-    
+
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
