--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+
     <!-- BARRA DE NAVEGACION-->
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container">
@@ -35,10 +36,14 @@
                     <li class="nav-item"><a class="nav-link fs-4 active text-black" aria-current="page"
                             href="index.html">INICIO</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link fs-4 active text-black" href="pages/Nosotros.html">NOSOTROS</a></li>
-                    <li class="nav-item"><a class="nav-link fs-4 active text-black" href="pages/Servicios.html">SERVICIOS</a>
+                    <li class="nav-item"><a class="nav-link fs-4 active text-black"
+                            href="pages/Nosotros.html">NOSOTROS</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link fs-4 active text-black" href="pages/Contactos.html">CONTACTOS</a>
+                    <li class="nav-item"><a class="nav-link fs-4 active text-black"
+                            href="pages/Servicios.html">SERVICIOS</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link fs-4 active text-black"
+                            href="pages/Contactos.html">CONTACTOS</a>
                     </li>
                 </ul>
             </div>
@@ -47,26 +52,29 @@
     <!--FIN BARRA DE NAVEGACION-->
 
 
+
     <!--CABECERA CARROUSEL-->
-        <header class="bg-dark py-5">
-            <div class="container px-5">
-                <div class="row gx-5 align-items-center justify-content-center">
-                    <div class="col-lg-8 col-xl-7 col-xxl-6">
-                        <div class="my-5 text-center text-xl-start">
-                            <h1 class="display-5 fw-bolder text-white mb-2">A Bootstrap 5 template for modern businesses</h1>
-                            <p class="lead fw-normal text-white-50 mb-4">Quickly design and customize responsive mobile-first
-                                sites with Bootstrap, the world’s most popular front-end open source toolkit!</p>
-                            <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-                                <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Get Started</a>
-                                <a class="btn btn-outline-light btn-lg px-4" href="#!">Learn More</a>
-                            </div>
+    <header class="bg-dark py-5">
+        <div class="container px-5">
+            <div class="row gx-5 align-items-center justify-content-center">
+                <div class="col-lg-8 col-xl-7 col-xxl-6">
+                    <div class="my-5 text-center text-xl-start">
+                        <h1 class="display-5 fw-bolder text-white mb-2">A Bootstrap 5 template for modern businesses
+                        </h1>
+                        <p class="lead fw-normal text-white-50 mb-4">Quickly design and customize responsive
+                            mobile-first
+                            sites with Bootstrap, the world’s most popular front-end open source toolkit!</p>
+                        <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
+                            <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Get Started</a>
+                            <a class="btn btn-outline-light btn-lg px-4" href="#!">Learn More</a>
                         </div>
                     </div>
-                    <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5"
-                            src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
                 </div>
+                <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5"
+                        src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
             </div>
-        </header>
+        </div>
+    </header>
     <!--FIN CARROUSEL-->
 
 
@@ -107,10 +115,11 @@
 
                     <!-- LOGO y SLOGAN -->
                     <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 text-center">
-                        <img src="assets/img/LogoServifacil.png" alt="Logo ServiFacil" style="width: 100px; height: auto;">
+                        <img src="assets/img/LogoServifacil.png" alt="Logo ServiFacil"
+                            style="width: 100px; height: auto;">
                         <p class="mt-3">¡Tu solución rápida y confiable para el hogar!</p>
                     </div>
-                    
+
                     <!-- Grid column -->
 
                     <hr class="w-100 clearfix d-md-none" />
