--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -8,17 +8,21 @@
     <meta name="author" content="" />
     <title>ServiFacil.com</title>
     <link rel="icon" type="image/x-icon" href="../assets/LogoServifacil.ico" />
+    <!-- ICONOS DE BOSTRAP-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
         crossorigin="anonymous" />
     <link href="../css/styles.css" rel="stylesheet" />
 </head>
 
 <body>
-    <!-- BARRA DE NAVEGACION-->
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container">
+
+    <!-- BARRA DE NAVEGACIÓN-->
+    <nav class="navbar navbar-expand-lg navbar-dark position-absolute top-0 start-0 w-100" style="z-index: 10;">
+        <div class="container d-flex align-items-center justify-content-between">
             <a class="navbar-brand" href="#!">
-                <img src="../assets/img/LogoServifacil.png" alt="Logo del negocio" style="height: 70px; width: 100px;">
+                <img src="../assets/img/LogoServifacil.png" alt="Logo del negocio" style="height: 60px; width: 90px;">
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -27,45 +31,44 @@
             </button>
 
             <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-                <ul class="navbar-nav mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link fs-4 active" aria-current="page"
-                            href="../index.html">INICIO</a>
+                <ul class="navbar-nav ms-auto me-auto text-center">
+                    <li class="nav-item">
+                        <a class="nav-link fs-5 text-custom-blue" aria-current="page" href="../index.html">
+                            <i class="bi bi-house-door-fill me-1"></i> Inicio
+                        </a>
                     </li>
-                    <li class="nav-item"><a class="nav-link fs-4 active" href="../pages/Nosotros.html">NOSOTROS</a></li>
-                    <li class="nav-item"><a class="nav-link fs-4 active" href="../pages/Servicios.html">SERVICIOS</a>
+                    <li class="nav-item">
+                        <a class="nav-link fs-5 text-custom-blue" href="../pages/Nosotros.html">
+                            <i class="bi bi-people-fill me-1"></i> Nosotros
+                        </a>
                     </li>
-                    <li class="nav-item"><a class="nav-link fs-4 active" href="../pages/Contactos.html">CONTACTOS</a>
+                    <li class="nav-item">
+                        <a class="nav-link fs-5 text-custom-blue" href="../pages/Servicios.html">
+                            <i class="bi bi-tools me-1"></i> Servicios
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fs-5 text-custom-blue" href="../pages/Contactos.html">
+                            <i class="bi bi-envelope-fill me-1"></i> Contactos
+                        </a>
                     </li>
                 </ul>
             </div>
-
         </div>
     </nav>
     <!--FIN BARRA DE NAVEGACION-->
 
-    <!--CABECERA CARROUSEL-->
-    <header class="bg-dark py-5">
-        <div class="container px-5">
-            <div class="row gx-5 align-items-center justify-content-center">
-                <div class="col-lg-8 col-xl-7 col-xxl-6">
-                    <div class="my-5 text-center text-xl-start">
-                        <h1 class="display-5 fw-bolder text-white mb-2">A Bootstrap 5 template for modern businesses
-                        </h1>
-                        <p class="lead fw-normal text-white-50 mb-4">Quickly design and customize responsive
-                            mobile-first
-                            sites with Bootstrap, the world’s most popular front-end open source toolkit!</p>
-                        <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-                            <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Get Started</a>
-                            <a class="btn btn-outline-light btn-lg px-4" href="#!">Learn More</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5"
-                        src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
-            </div>
+    <!-- CABECERA -->
+    <header class="hero-header position-relative d-flex align-items-center justify-content-center text-center">
+        <img src="../assets/img/shutterstock_164852135-e1593077044741.jpg"
+            class="position-absolute w-100 h-100 object-fit-cover opacity-50 fade-in-bg" alt="Fondo ServiFacil" />
+        <div class="content position-relative z-1 fade-in-text">
+            <h1 class="display-4 fw-bold text-custom-blue">Nosotros</h1>
+            <p class="lead fw-normal text-custom-blue">Soluciones confiables para tu hogar y negocio.</p>
+
         </div>
     </header>
-    <!--FIN CARROUSEL-->
+    <!--FIN CABECERA-->
 
     <!-- Seccion de Mision y Vision -->
     <section class="py-3 py-md-5 py-xl-8">
@@ -76,16 +79,16 @@
                 <div class="col-12 col-lg-4 d-flex">
                     <article>
                         <div class="card border-0 d-flex flex-column" style="height: 100%;">
-                            <img class="card-img-top img-fluid m-0" loading="lazy" src="../assets/img/Mision.jpg"
+                            <img class="card-img-top img-fluid m-0" loading="lazy" src="../assets/img/Mision.webp"
                                 alt="Our Approach">
                             <div class="card-body border  p-4 d-flex flex-column">
                                 <div class="entry-header mb-3">
                                     <h2 class="card-title entry-title h4 mb-0">
-                                        <a class="link-dark text-decoration-none" href="#!">MISION</a>
+                                        <a class="link-dark text-decoration-none" href="#!"></a>
                                     </h2>
                                 </div>
-                                <p class="card-text entry-summary text-secondary mb-3 flex-grow-1">Nuestra misión
-                                    Facilitar la vida de las personas conectándolas con profesionales verificados de
+                                <p class="card-text entry-summary text-secondary mb-3 flex-grow-1">Nuestra Misión
+                                    es facilitar la vida de las personas conectándolas con profesionales verificados de
                                     servicios a domicilio, ofreciendo
                                     soluciones rápidas, seguras y de calidad las 24 horas del día, los 7 días de la
                                     semana, mediante una plataforma digital
@@ -99,14 +102,16 @@
                 <div class="col-12 col-lg-4 d-flex">
                     <article>
                         <div class="card border-0 d-flex flex-column" style="min-height: 100%;">
-                            <img class="card-img-top img-fluid m-0" loading="lazy" src="" alt="Our Vision">
+                            <img class="card-img-top img-fluid m-0" loading="lazy" src="../assets/img/vision.png"
+                                alt="Our Vision">
                             <div class="card-body border p-4">
                                 <div class="entry-header mb-3">
                                     <h2 class="card-title entry-title h4 mb-0">
-                                        <a class="link-dark text-decoration-none" href="#!">VISION</a>
+                                        <a class="link-dark text-decoration-none" href="#!"></a>
                                     </h2>
                                 </div>
-                                <p class="card-text entry-summary text-secondary mb-3">Ser la plataforma líder en
+                                <p class="card-text entry-summary text-secondary mb-3">Nuestra Vision es ser la empresa
+                                    líder en
                                     servicios a domicilio en la capital Managua reconocida por su innovación, eficiencia
                                     y
                                     compromiso con la satisfacción del cliente, expandiéndonos a nivel nacional y
@@ -122,11 +127,11 @@
                     <article>
                         <div class="card border-0 d-flex flex-column" style="min-height: 100%;">
                             <img class="card-img-top img-fluid m-0" loading="lazy"
-                                src="~/Content/images/valores-corporativos-de-una-empresa.jpg" alt="Our Approach">
+                                src="../assets/img/valores-corporativos-de-una-empresa.jpg" alt="Our Approach">
                             <div class="card-body border p-4">
                                 <div class="entry-header mb-3">
                                     <h2 class="card-title entry-title h4 mb-0">
-                                        <a class="link-dark text-decoration-none" href="#!">VALORES</a>
+                                        <a class="link-dark text-decoration-none" href="#!"></a>
                                     </h2>
                                 </div>
 
@@ -155,21 +160,6 @@
             </div>
         </div>
     </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <!--FOOTER-->
     <footer class="text-center text-lg-start text-white" style="background-color: #929fba">
@@ -259,7 +249,7 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="../js/scripts.js"></script>
+    <script src="js/scripts.js"></script>
 
 </body>
 
