--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -16,6 +16,7 @@
     <link href="../css/styles.css" rel="stylesheet" />
 </head>
 
+
 <body>
 
     <!-- BARRA DE NAVEGACIÓN-->
@@ -34,22 +35,22 @@
                 <ul class="navbar-nav ms-auto me-auto text-center">
                     <li class="nav-item">
                         <a class="nav-link fs-5 text-custom-blue" aria-current="page" href="../index.html">
-                            <i class="bi bi-house-door-fill me-1"></i> Inicio
+                            <i class="bi bi-house-door-fill me-1"></i> INICIO
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link fs-5 text-custom-blue" href="../pages/Nosotros.html">
-                            <i class="bi bi-people-fill me-1"></i> Nosotros
+                            <i class="bi bi-people-fill me-1"></i> NOSOTROS
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link fs-5 text-custom-blue" href="../pages/Servicios.html">
-                            <i class="bi bi-tools me-1"></i> Servicios
+                            <i class="bi bi-tools me-1"></i> SERVICIOS
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link fs-5 text-custom-blue" href="../pages/Contactos.html">
-                            <i class="bi bi-envelope-fill me-1"></i> Contactos
+                            <i class="bi bi-envelope-fill me-1"></i> CONTACTOS
                         </a>
                     </li>
                 </ul>
@@ -57,6 +58,7 @@
         </div>
     </nav>
     <!--FIN BARRA DE NAVEGACION-->
+
 
     <!-- CABECERA -->
     <header class="hero-header position-relative d-flex align-items-center justify-content-center text-center">
@@ -69,6 +71,7 @@
         </div>
     </header>
     <!--FIN CABECERA-->
+
 
     <!-- Seccion de Mision y Vision -->
     <section class="py-3 py-md-5 py-xl-8">
@@ -185,17 +188,17 @@
                     <!-- Grid column -->
                     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
                         <h6 class="text-uppercase mb-4 font-weight-bold">SERVICIOS</h6>
-                        <p>
-                            <a class="text-white">MDBootstrap</a>
+                        <p class="text-white">
+                            Albanileria
                         </p>
-                        <p>
-                            <a class="text-white">MDWordPress</a>
+                        <p class="text-white">
+                            Fontaneria
                         </p>
-                        <p>
-                            <a class="text-white">BrandFlow</a>
+                        <p class="text-white">
+                            <a>Electricidad</a>
                         </p>
-                        <p>
-                            <a class="text-white">Bootstrap Angular</a>
+                        <p class="text-white">
+                            Reparacion y Mantenimiento en el Hogar
                         </p>
                     </div>
                     <!-- Grid column -->
@@ -208,10 +211,10 @@
                     <!-- Grid column -->
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
                         <h6 class="text-uppercase mb-4 font-weight-bold">CONTACTOS</h6>
-                        <p><i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
-                        <p><i class="fas fa-envelope mr-3"></i> info@gmail.com</p>
-                        <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-                        <p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+                        <p><i class="fas fa-home mr-3"></i> Universidad De Managua UDeM</p>
+                        <p><i class="fas fa-envelope mr-3"></i> ServiFacil@gmail.com</p>
+                        <p><i class="fas fa-phone mr-3"></i> 2256-7856</p>
+                        <p><i class="fas fa-print mr-3"></i> 2230</p>
                     </div>
                     <!-- Grid column -->
 
@@ -249,8 +252,7 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
-
+    <script src="../js/scripts.js"></script>
 </body>
 
 </html>
