--- a/index.html
+++ b/index.html
@@ -189,6 +189,10 @@
                         <p class="text-white">
                             Reparacion y Mantenimiento en el Hogar
                         </p>
+
+                        <p class="text-white">
+                            Muchos Mas...
+                        </p>
                     </div>
                     <!-- Grid column -->
 
@@ -200,7 +204,7 @@
                     <!-- Grid column -->
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
                         <h6 class="text-uppercase mb-4 font-weight-bold">CONTACTOS</h6>
-                        <p><i class="fas fa-home mr-3"></i> Universidad De Managua UDeM</p>
+                        <p><i class="fas fa-home mr-3"></i> Universidad De Managua UdeM</p>
                         <p><i class="fas fa-envelope mr-3"></i> ServiFacil@gmail.com</p>
                         <p><i class="fas fa-phone mr-3"></i> 2256-7856</p>
                         <p><i class="fas fa-print mr-3"></i> 2230</p>
