--- a/pages/services/Electricidad.html
+++ b/pages/services/Electricidad.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
         crossorigin="anonymous" />
     <link rel="icon" type="image/x-icon" href="/assets/LogoServifacil.ico" />
-    <link href="../css/styles.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet" />
 
     <style>
         .seccion-electricistas {
