--- a/pages/services/Electricidad.html
+++ b/pages/services/Electricidad.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
         crossorigin="anonymous" />
     <link rel="icon" type="image/x-icon" href="/assets/LogoServifacil.ico" />
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="../../css/styles.css" rel="stylesheet" />
 
     <style>
         .seccion-electricistas {
@@ -68,20 +68,20 @@
         style="height: 75px; font-family: 'Poppins', sans-serif;">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="../assets/img/LogoServifacil.png" alt="Servifacil Logo" style="height: 70px; width: 110px;">
+                <img src="../../assets/img/LogoServifacil.png" alt="Servifacil Logo" style="height: 70px; width: 110px;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto d-flex align-items-center justify-content-end w-100 gap-3">
-                    <li class="nav-item"><a class="nav-link nav-custom" href="../index.html"><i
+                    <li class="nav-item"><a class="nav-link nav-custom" href="../../index.html"><i
                                 class="fa-solid fa-house-chimney me-2"></i> Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link nav-custom" href="../pages/Nosotros.html"><i
+                    <li class="nav-item"><a class="nav-link nav-custom" href="../../pages/Nosotros.html"><i
                                 class="fa-solid fa-users-line me-2"></i> Nosotros</a></li>
-                    <li class="nav-item"><a class="nav-link nav-custom" href="../pages/Servicios.html"><i
+                    <li class="nav-item"><a class="nav-link nav-custom" href="../../pages/Servicios.html"><i
                                 class="fa-solid fa-clipboard-list me-2"></i> Servicios</a></li>
-                    <li class="nav-item"><a class="nav-link nav-custom" href="../pages/Contactos.html"><i
+                    <li class="nav-item"><a class="nav-link nav-custom" href="../../pages/Contactos.html"><i
                                 class="fa-solid fa-envelope-open-text me-2"></i> Contactos</a></li>
                 </ul>
             </div>
@@ -95,7 +95,7 @@
             <div class="row gx-5 justify-content-center mt-3">
                 <!-- BOTÓN VOLVER -->
                 <div class="text-start btn-volver d-flex align-items-center gap-3">
-                    <a href="../pages/Servicios.html" class="btn btn-dark">
+                    <a href="../../pages/Servicios.html" class="btn btn-dark">
                         <i class="fa-solid fa-arrow-left me-2"></i>Volver
                     </a>
                 </div>
@@ -224,7 +224,7 @@
             <section>
                 <div class="row">
                     <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 text-center">
-                        <img src="../assets/img/LogoServifacil.png" alt="Logo ServiFacil"
+                        <img src="../../assets/img/LogoServifacil.png" alt="Logo ServiFacil"
                             style="width: 100px; height: auto;">
                         <p class="mt-3">¡Tu solución rápida y confiable para el hogar!</p>
                     </div>
@@ -263,7 +263,7 @@
 
     <!-- JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/scripts.js"></script>
+    <script src="../../js/scripts.js"></script>
 
 </body>
 
