Perfiles Compuestos Con Responsive

--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -21,7 +21,7 @@
 
     <!-- BARRA DE NAVEGACION-->
     <nav class="navbar navbar-expand-lg navbar-light bg-gradient shadow-sm"
-        style="height: 75px; font-family: 'Poppins', sans-serif;">
+        style="font-family: 'Poppins', sans-serif;">
         <div class="container-fluid">
             <!-- Logo -->
             <a class="navbar-brand" href="#">
