--- a/pages/services/Electricidad.html
+++ b/pages/services/Electricidad.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
         crossorigin="anonymous" />
-    <link rel="icon" type="image/x-icon" href="/assets/LogoServifacil.ico" />
+    <link rel="icon" type="image/x-icon" href="../../assets/LogoServifacil.ico" />
     <link href="../../css/styles.css" rel="stylesheet" />
 
     <style>
@@ -65,7 +65,7 @@
 
     <!-- BARRA DE NAVEGACION -->
     <nav class="navbar navbar-expand-lg navbar-light bg-gradient shadow-sm"
-        style="height: 75px; font-family: 'Poppins', sans-serif;">
+        style="font-family: 'Poppins', sans-serif;">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="../../assets/img/LogoServifacil.png" alt="Servifacil Logo" style="height: 70px; width: 110px;">
