--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 <body>
     <!-- BARRA DE NAVEGACION-->
     <nav class="navbar navbar-expand-lg navbar-light bg-gradient shadow-sm"
-        style="height: 75px; font-family: 'Poppins', sans-serif;">
+        style="font-family: 'Poppins', sans-serif;">
         <div class="container-fluid">
             <!-- Logo -->
             <a class="navbar-brand" href="#">
-                <img src="assets/img/LogoServifacil.png" alt="Servifacil Logo" style="height: 70px; width: 110px;">
+                <img src="assets/img/LogoServifacil.png" alt="Servifacil Logo" style="height: 70px; width: 120px;">
             </a>
 
             <!-- Botón responsive -->
