Perfiles Compuestos Con Responsive y card mejorado

--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -124,7 +124,7 @@
                                         <a class="link-dark text-decoration-none" href="#!"></a>
                                     </h2>
                                 </div>
-                                <p class="card-text entry-summary text-secondary mb-3">Nuestra Vision es ser la empresa
+                                <p class="card-text entry-summary text-secondary mb-3">Nuestra Vision es ser la empresa y plataforma
                                     líder en
                                     servicios a domicilio en la capital Managua reconocida por su innovación, eficiencia
                                     y
