--- a/pages/Servicios.html
+++ b/pages/Servicios.html
@@ -89,7 +89,7 @@
                     <div class="text-center">
                         <h2 class="fw-bolder">NUESTROS SERVICIOS</h2>
                         <p class="lead fw-normal text-muted mb-5">Confianza, experiencia y atención personalizada.
-                            Transformamos tu hogar con dedicación y profesionalismo.</p>
+                            Transformamos tu hogar con dedicación y profesionalismo, precios transparentes y pagos seguros</p>
                     </div>
                 </div>
             </div>
